2012-08-15  Peter Bergner  <bergner@vnet.ibm.com>

	* gas/ppc/common.d ("nop", "xnop"): Add tests.
	* gas/ppc/common.s: Likewise.
	* gas/ppc/power7.d ("yield", "mdoio", "mdoom"): Add tests.
	* gas/ppc/power7.s: Likewise.

2012-08-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/14457
	* gas/i386/i386.exp: Run reg-bad.

	* gas/i386/reg-bad.l: New.
	* gas/i386/reg-bad.s: Likewise.

2012-08-14  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/mmix/err-fb-2.s: New test.

2012-08-13  Ian Bolton  <ian.bolton@arm.com>
            Laurent Desnogues  <laurent.desnogues@arm.com>
            Jim MacArthur  <jim.macarthur@arm.com>
            Marcus Shawcroft  <marcus.shawcroft@arm.com>
            Nigel Stephens  <nigel.stephens@arm.com>
            Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
            Richard Earnshaw  <rearnsha@arm.com>
            Sofiane Naci  <sofiane.naci@arm.com>
            Tejas Belagod  <tejas.belagod@arm.com>
            Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64: New directory.
	* gas/aarch64/aarch64.exp: New file.
	* gas/aarch64/addsub.d: New file.
	* gas/aarch64/addsub.s: New file.
	* gas/aarch64/advsimd-across.d: New file.
	* gas/aarch64/advsimd-across.s: New file.
	* gas/aarch64/advsimd-misc.d: New file.
	* gas/aarch64/advsimd-misc.s: New file.
	* gas/aarch64/advsisd-copy.d: New file.
	* gas/aarch64/advsisd-copy.s: New file.
	* gas/aarch64/advsisd-misc.d: New file.
	* gas/aarch64/advsisd-misc.s: New file.
	* gas/aarch64/alias.d: New file.
	* gas/aarch64/alias.s: New file.
	* gas/aarch64/bitfield-alias.d: New file.
	* gas/aarch64/bitfield-alias.s: New file.
	* gas/aarch64/bitfield-bfm.d: New file.
	* gas/aarch64/bitfield-bfm.s: New file.
	* gas/aarch64/bitfield-dump: New file.
	* gas/aarch64/bitfield-no-aliases.d: New file.
	* gas/aarch64/crypto.d: New file.
	* gas/aarch64/crypto.s: New file.
	* gas/aarch64/diagnostic.d: New file.
	* gas/aarch64/diagnostic.l: New file.
	* gas/aarch64/diagnostic.s: New file.